A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5875] fixed items configuration in French language (Oleg)
A......... [ZBX-5860] fixed hostgroup massupdate (Eduard)
A.F....... [ZBX-5814] fixed an incorrect error message when saving an illegal trigger expression (Sasha)
A.F....... [ZBX-4247] fixed processing of trigger expression if item key contains another trigger expression string (Sasha)
..F....... [ZBX-2640] fixed some issues when creating and editing log triggers (Sasha)
..F....... [ZBX-5855] fixed "Array to string conversion" errors in 1.8 XML import (Oleg)
..F....... [ZBX-3684] fixed "Undefined index" error in 1.8 XML import (Oleg)
...G...... [ZBX-5732] fixed sending data from a file in Zabbix sender (Andris)
...G...... [ZBX-5741] fixed Zabbix sender crash if a corrupted server response is received (Andris)
...G...... [ZBX-5722] fixed calculation of "vm.memory.size[available]" in Zabbix agent on Solaris (Andris)
.......PS. [ZBX-5149] fixed refreshing of unsupported "Zabbix agent (active)" items by a proxy (Sasha)
..F....... [ZBX-5759] fixed Oracle ORA-01002 SQL error on items bulk actions (Toms)
..F....... [ZBX-5639] fixed global options "dropdown first entry" and "remember selected" in availability reports (Oleg)
..F....... [ZBX-5639] improved sdii() debugging function (Toms)
A.F.....S. [ZBX-5816] fixed undefined index in Monitoring > Events, when favorite trigger has been deleted (Toms, Sasha)
..F....... [ZBX-5771] fixed acknowledge tick mark lost on "overview" page (Oleg)
..F....... [ZBX-5821] fixed 2.0 xml format template import (Oleg)
........S. [ZBX-5791] fixed possible SQL errors when linking groups to a host (Sasha)
..F....... [ZBX-5786] fixed screens import, that contain simple graphs or plain texts (Oleg)